--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
 			<artifactId>JDA</artifactId>
 			<version>4.2.0_198</version>
 		</dependency>
+		<dependency>
+			<groupId>com.sedmelluq</groupId>
+			<artifactId>lavaplayer</artifactId>
+			<version>1.3.77</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
@@ -37,6 +42,11 @@
 			<id>jcenter</id>
 			<name>jcenter-bintray</name>
 			<url>http://jcenter.bintray.com</url>
+		</repository>
+		<repository>
+			<id>dv8tion</id>
+			<name>m2-dv8tion</name>
+			<url>https://m2.dv8tion.net/releases</url>
 		</repository>
 	</repositories>
 
