--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 		<dependency>
 			<groupId>net.dv8tion</groupId>
 			<artifactId>JDA</artifactId>
-			<version>4.2.0_198</version>
+			<version>5.0.0-beta.6</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sedmelluq</groupId>
