--- a/pom.xml
+++ b/pom.xml
@@ -40,9 +40,9 @@
             <version>5.0.0-beta.6</version>
         </dependency>
         <dependency>
-            <groupId>com.sedmelluq</groupId>
+            <groupId>dev.arbjerg</groupId>
             <artifactId>lavaplayer</artifactId>
-            <version>1.3.77</version>
+            <version>2.1.1</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -82,6 +82,10 @@
             <id>dv8tion</id>
             <name>m2-dv8tion</name>
             <url>https://m2.dv8tion.net/releases</url>
+        </repository>
+        <repository>
+            <id>jitpack</id>
+            <url>https://jitpack.io</url>
         </repository>
     </repositories>
 
