temporary updates a dependency to snapshot version that fixes the youtube player

--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,8 @@
         <dependency>
             <groupId>dev.arbjerg</groupId>
             <artifactId>lavaplayer</artifactId>
-            <version>2.1.1</version>
+<!--            <version>2.1.1</version> FIX THIS AFTER A VERSION RELEASES-->
+            <version>0eaeee195f0315b2617587aa3537fa202df07ddc-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -73,6 +74,11 @@
     </dependencyManagement>
 
     <repositories>
+        <repository>
+            <id>arbjergDev-snapshots</id>
+            <name>Lavalink Repository</name>
+            <url>https://maven.lavalink.dev/snapshots</url>
+        </repository>
         <repository>
             <id>jcenter</id>
             <name>jcenter-bintray</name>
